tests/ui/test-attrs/inaccessible-test-modules.postedition2015.stderr
error[E0432]: unresolved import `main`
  --> $DIR/inaccessible-test-modules.rs:9:5
   |
LL | use main as x;
   |     ^^^^^^^^^ no external crate `main`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
